# patrician-crawler

./: .travis.yml  Cargo.toml  readme.org
src/: main.rs  test_crawler.rs
src/crawler/: addr.rs  constants.rs  crawler.rs  mock.rs  mod.rs  process.rs  structs.rs  utils.rs  websocket.rs
src/crawler/subcrawlers/: general.rs  kontor.rs  mod.rs  player.rs  ship.rs  town.rs
