[package]
name = "patrician-crawler"
version = "1.0.0"
authors = ["janmo"]

[dependencies]
winapi = "0.2"
kernel32-sys = "0.2.2"
wio = "0.1.1"
time = "0.1.35"
serde = "*"
serde_json = "*"
env_logger = "*"
log = "*"
rand = "*"
serde_macros = "0.7.11"
clippy = "*"
getopts = "0.2.4"

[dependencies.ws]
version = "*"